--- a/core/static/css/home/base.css
+++ b/core/static/css/home/base.css
@@ -55,9 +55,9 @@ p{
 }
 
 .active_assignment {
-    background-color: #8db881;
+    
 }
 
 .inactive_assignment {
-    background-color: rgba(68, 67, 27, 0.51);
+    background-color: #B3E0E7;
 }
