--- a/core/templates/authenticated/assignments_table/uncorrected.html
+++ b/core/templates/authenticated/assignments_table/uncorrected.html
@@ -9,7 +9,7 @@
 {% endblock table_id %}
 
 {% block infix_column_header %}
-    <th>Opens At</th>
+    <th>Date Assigned</th>
 {% endblock infix_column_header %}
 
 {% block suffix_column_header %}
