--- a/core/templates/authenticated/charts/performance_report.html
+++ b/core/templates/authenticated/charts/performance_report.html
@@ -1,5 +1,5 @@
 <div id="performance_report">
-    <div id="performance_bargraph" class='chart scroll'>
+    <div id="performance_bargraph" class='chart scroll no-border'>
         {% include "authenticated/charts/chart_loader.html" only %}
     </div>
 </div>
