--- a/core/templates/authenticated/settings/listings.html
+++ b/core/templates/authenticated/settings/listings.html
@@ -1,5 +1,5 @@
 <h6 class="header header6"> {{ listings_title }}:</h6>
-<div class="indented_body_left">
+<div class="margin-left-30 margin-top-neg-30">
     <ul>
     {% for listing in listings %}
         <li> {{ listing }} </li>
