--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -7,7 +7,7 @@
     </ul>
 </div-->
 
-<nav class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px; width:100vw;">
+<nav class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px; width:100%;">
 
 <div class="container-fluid">
 	<div class="navbar-header">
