--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -121,7 +121,7 @@
         <a name="info"></a>
         <div id="horizontaldiv2">
             <div id="index_section1">
-                We work collaboratively with schools to provide teachers with an intuitive interface to assign home-work to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in depth analytics to improve educational outcomes in the classroom. 
+                We work collaboratively with schools to provide teachers with an intuitive interface to assign homework to their students online. Our platform automatically corrects the answers and provides schools, teachers and parents with in-depth analytics to improve educational outcomes in the classroom. 
                 <ul>
                     <li><img class="indextick" src="{% static 'img/index/black_tick.png' %}">
                     High quality question banks based on Indian curriculum </li>
