--- a/core/static/css/assignment.css
+++ b/core/static/css/assignment.css
@@ -2,6 +2,10 @@
     margin-left: 10px;
 }
 
+#aql_description{
+	margin-left:-10px;
+}
+
 input{
     margin: 10px;
 } 
@@ -23,4 +27,12 @@ input{
 
 #submit_button{
     margin: 0px;    
+}
+
+.fieldWrapper{
+	margin-top:10px;
+}
+
+#assignmentDescription{
+	margin-top:20px;
 }
