--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -43,22 +43,23 @@
                     {{ form.question_set.label_tag }} {{ form.question_set }}
                     <span class="helptext">{{ form.question_set.help_text }}</span>
                 </div>
-                 <label> Description of Assignment:</label>
-                <p id="aql_description">    {# This is where the selected aql's description will be inserted #}
+                 <label id="assignmentDescription"> Description of Assignment:</label>
+                <p id="aql_description"> {# This is where the selected aql's description will be inserted #}
                 </p>
-                <a id="preview_link" href="{% url 'assignment_preview_id' '0' %}">
+                <a class="no-decoration" id="preview_link" href="{% url 'assignment_preview_id' '0' %}">
                     {# 0 is placeholder , will be overwritten on page load #}
-                    <button type='button' class="btn btn-warning">Preview HomeWork</button>
+                    <button type='button' class="btn mkbut">Preview HomeWork</button>
                 </a>
-                <input id='submit_button' class='btn btn-info' type='submit' value='Set The Assignment'/>
+                <input id='submit_button' class='btn mkbut margin-left-neg-10 no-decoration' type='submit' value='Set The Assignment'/>
             </form>
 
+            <hr>
             {% if form.question_set_override %}
-                <p class='helptext'>To go back to assigning regular homework (question sets of same standard) <a
-                        href="{% url 'assignment' %}"><button type='button'class='override_button btn'> Questions for same standard</button></a></p>
+                <p class='helptext'>Go back to assigning regular homework (question sets of same standard) <a
+                        href="{% url 'assignment' %}"><button type='button'class='override_button btn btn-info'> Questions for same standard</button></a></p>
             {% else %}
-                <p class='helptext'><b>Note:-</b> To assign homework using question sets for a different standard <a
-                        href="{% url 'assignment_override' %}"><button type='button' class='override_button btn'>Questions for all standards</button></a></p>
+                <p class='helptext'><b>You can also assign homework using question sets for a different standard <a
+                        href="{% url 'assignment_override' %}"><button type='button' class='override_button btn btn-danger'>Questions for all standards</button></a></p>
             {% endif %}
         {% endwith %}
     </div>
