--- a/core/templates/authenticated/charts/printbutton.html
+++ b/core/templates/authenticated/charts/printbutton.html
@@ -1,3 +1,3 @@
 <div id='printbutton'>
-    <input type='button' id="print_performance" class='btn btn-primary' value='Print Performance'/>
+    <input type='button' id="print_performance" class='btn btn-primary' value='Print Performance Report'/>
 </div>
