--- a/core/templates/authenticated/password.html
+++ b/core/templates/authenticated/password.html
@@ -24,7 +24,7 @@
                     {% include 'authenticated/widgets/help_text.html' with field=form.old_password only %}
                 </div>
                 {% include "authenticated/widgets/password_change.html" with form=form only %}
-                <input type='submit' value='Submit'/>
+                <input class="pass-but margin-top-10" type='submit' value='Submit'/>
             </form>
         {% endwith %}
     </div>
