--- a/core/templates/authenticated/subject_id/base.html
+++ b/core/templates/authenticated/subject_id/base.html
@@ -8,6 +8,7 @@
 
 {% block authenticated_body %}
     <h5 class="topheader row well header5">{{ vm.authenticated_body.subjectroom_label }}</h5>
+    <div style="margin-top:-30px;"></div>
     {% include "authenticated/widgets/announcements_table.html" with announcements=vm.authenticated_body.announcements only %}
     {% block subjectroom_body %}{% endblock subjectroom_body %}
     <div id='subjectroom_id' class='hidden'> {{ vm.authenticated_body.subjectroom_id }}</div>
