--- a/core/templates/authenticated/subject_id/teacher.html
+++ b/core/templates/authenticated/subject_id/teacher.html
@@ -6,7 +6,7 @@
     <div class='row'>
         {% include "authenticated/widgets/teacher_subjectroom_performance.html" only %}
     </div>
-    <div class='row'>
+    <div class='row margin-top-20'>
         {% include "authenticated/reportcard/subjectroom.html" with reportcard=vm.authenticated_body.reportcard only %}
     </div>
 {% endblock subjectroom_body %}
