--- a/core/templates/authenticated/widgets/simple_form.html
+++ b/core/templates/authenticated/widgets/simple_form.html
@@ -5,5 +5,5 @@
 {% endif %}
 {% csrf_token %}
 {{ form.as_p }}
-<input type='submit' value='Submit'/>
+<input id="simpleSubmit" class="btn btn-primary" type='submit' value='Submit'/>
 </form>
