--- a/core/templates/forgot_password/mailed.html
+++ b/core/templates/forgot_password/mailed.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
-{% block body %}
+
+{% block base_body %}
 <h4 class='well col-md-12'> Reset your Password</h4>
 <div class="indented_body_left">
     <p> If your entered email was registered with us, you will receive the instructions for password reset shortly. </p>
     <p> You should receive an email within the next 30 minutes. </p>
 </div>
-{% endblock body %}
+{% endblock base_body %}
