--- a/hwcentral/templates/404.html
+++ b/hwcentral/templates/404.html
@@ -2,11 +2,11 @@
 
 {% block title %}Page not found{% endblock title %}
 
-{% block body %}
+{% block base_body %}
 <div class="indented_body_left">
     <h2>Page not found</h2>
 
     <p>We&#39;re sorry, but the requested page could not be found.</p>
     <p>Return to <a href="{% url 'index' %}">Home</a></p>
 </div>
-{% endblock body %}
+{% endblock base_body %}
