--- a/hwcentral/templates/503.html
+++ b/hwcentral/templates/503.html
@@ -2,10 +2,10 @@
 
 {% block title %}Service Unavailable{% endblock title %}
 
-{% block body %}
+{% block base_body %}
 <div class="indented_body_left">
     <h2>HWCentral is currently down for scheduled maintenance</h2>
     <p>Please check back during our regular service hours (4am-11pm). Thanks for your patience.</p>
     <p>Return to <a href="{% url 'index' %}">Home</a></p>
 </div>
-{% endblock body %}
+{% endblock base_body %}
