--- a/core/templates/password_reset/complete.html
+++ b/core/templates/password_reset/complete.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-{% block body %}
+
+{% block base_body %}
     <div class="indented_body_left">
         <p> Your password has been updated.  You may go ahead and log in now.</p>
         <p><a href="{{ login_url }}">Go to Log in</a></p>
     </div>
-{% endblock body %}
+{% endblock base_body %}
