--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -1,84 +1,42 @@
-<!DOCTYPE html>
+{% extends 'root.html' %}
 
-<html lang="en">
-<head>
+{% load staticfiles %}
 
-    {% load staticfiles %}
-
-    <!-- Title -->
-
-    <title>HW Central - {% block title %}{{ title }}{% endblock title %}</title>
-
-    <!-- Meta -->
-
-    {% block meta %}{% endblock meta %}
-
-    <!-- Favicon -->
-
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
+{% block root_css %}
 
     <!-- Styles -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/header.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.min.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/chosen/chosen.min.css' %}" type="text/css"/>
-    {% block css %}{% endblock css %}
+    {% block base_css %}{% endblock base_css %}
+{% endblock root_css %}
 
-    <!-- Scripts -->
-    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+{% block root_js %}
     <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/chosen.jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
-    
-    {% block js %}{% endblock js %}
 
-</head>
+    {% block base_js %}{% endblock base_js %}
+{% endblock root_js %}
 
-<body>
-<!-- Google Tag Manager -->
-<noscript>
-    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-TJZWJQ"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<script>(function (w, d, s, l, i) {
-    w[l] = w[l] || [];
-    w[l].push({
-        'gtm.start': new Date().getTime(), event: 'gtm.js'
-    });
-    var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-    j.async = true;
-    j.src =
-            '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-    f.parentNode.insertBefore(j, f);
-})(window, document, 'script', 'dataLayer', 'GTM-TJZWJQ');</script>
-<!-- End Google Tag Manager -->
-<div>
+{% block root_body %}
 
     <!-- Header -->
-
-    {% block header %}
+    {% block base_header %}
         {% include "header.html" with user=user sleep_mode=sleep_mode only %}
-    {% endblock header %}
+    {% endblock base_header %}
 
     <!-- Body -->
 
-    <div id='main_body'>
-        {% block body %}{% endblock body %}
-        <div style="clear:both;">
-        </div>
+    <div id='base_body' class="row">
+        {% block base_body %}{% endblock base_body %}
     </div>
+
     <!-- Footer -->
-
-    {% block footer %}
+    {% block base_footer %}
         {% include 'footer.html' only %}
-    {% endblock footer %}
+    {% endblock base_footer %}
 
-    
-</div>
-</body>
-</html>
+{% endblock root_body %}
