--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -48,9 +48,9 @@
                 </p>
                 <a class="no-decoration" id="preview_link" href="{% url 'assignment_preview_id' '0' %}">
                     {# 0 is placeholder , will be overwritten on page load #}
-                    <button type='button' class="btn mkbut">Preview HomeWork</button>
+                    <button type='button' class="btn make_announcement_button">Preview HomeWork</button>
                 </a>
-                <input id='submit_button' class='btn mkbut margin-left-neg-10 no-decoration' type='submit' value='Set The Assignment'/>
+                <input id='submit_button' class='btn make_announcement_button margin-left-neg-10 no-decoration' type='submit' value='Set The Assignment'/>
             </form>
 
             <hr>
