--- a/core/templates/authenticated/home/teacher.html
+++ b/core/templates/authenticated/home/teacher.html
@@ -18,7 +18,7 @@
 
 {% block assignments %}
         {% include "authenticated/assignments_table/uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
-        <div class="legendDiv">
+        <div class="chart_legend">
             <span class="legend1"></span>
             <span class="legend2"> - Denotes assignments that are not yet active. These are not visible to the student.</span>
             <div class="clearboth"></div>
