--- a/core/static/css/password_strength.css
+++ b/core/static/css/password_strength.css
@@ -44,7 +44,7 @@
     margin-bottom: 1em; 
 }
 
-.pass-but{
+.password-btn{
     background-color:#008B8B;
     border-radius:4px;
     box-shadow: 0px 0px 0px #000 !important;
