--- a/core/templates/authenticated/widgets/assignment_create.html
+++ b/core/templates/authenticated/widgets/assignment_create.html
@@ -1,3 +1,3 @@
 <a class="no-decoration" href="{% url 'assignment' %}">
-    <button class="btn mkbut">Assign HomeWork</button>
+    <button class="btn make_announcement_button">Assign HomeWork</button>
 </a>
