--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -426,6 +426,9 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 }
 
 #enquirer_form ul.errorlist li {
+    width: 150px;
+    position: absolute;
+    margin-top: 27px;
     list-style: none;
     color: red;
     font-style: italic;
