--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -426,12 +426,20 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 }
 
 #enquirer_form ul.errorlist li {
-    width: 150px;
     position: absolute;
-    margin-top: 27px;
     list-style: none;
     color: red;
     font-style: italic;
     font-size: small;
     display: inline;
+    margin-top: 27px;
+    margin-left: 5px;
+}
+
+@media screen and (max-width: 700px){
+    #enquirer_form ul.errorlist li {
+        position: relative;
+        display:block;
+        margin: 0px;
+    }
 }
