--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -168,9 +168,9 @@
 
         <a name="info"></a>
         <div id="horizontaldiv5">
-                Email us at <a href="mailto:contact@hwcentral.in" target="_top">contact@hwentral.in</a> or call us at <a href="tel:+91 9922498624">+91 9922498624</a>
+                Email us at <a href="mailto:contact@hwcentral.in" target="_top">contact@hwentral.in</a> or call us at <a href="tel:+919922498624">+91 9922498624</a>
             <div style="font-size:20px; margin-top:20px;">
-                  © 2015. Homework Central. 
+                  © 2015 Homework Central
             </div>  
          
         </div>
