--- a/core/templates/authenticated/reportcard/subjectroom.html
+++ b/core/templates/authenticated/reportcard/subjectroom.html
@@ -9,8 +9,8 @@
     <tbody>
     {% for reportcard_row in reportcard.rows %}
         <tr>
-            <td>{{ reportcard_row.name }}</td>
-            <td>{{ reportcard_row.average }}<span class="hidden student_id">{{ reportcard_row.student_id }}</span>
+            <td> <a class='student_subjectroom_performance_link'>{{ reportcard_row.name }} </a></td>
+            <td><a class='student_subjectroom_performance_link'>{{ reportcard_row.average }}</a><span class="hidden student_id">{{ reportcard_row.student_id }}</span>
             </td>
         </tr>
     {% endfor %}
