--- a/core/templates/authenticated/classroom_id.html
+++ b/core/templates/authenticated/classroom_id.html
@@ -17,7 +17,7 @@
         {% include "authenticated/reportcard/classroom.html" with reportcard=vm.authenticated_body.reportcard only %}
         {% include "authenticated/widgets/standard_chart_popup.html" only %}
         {% include "authenticated/widgets/section_chart_popup.html" only %}
-    </div>
+        {% include "authenticated/widgets/student_performance_breakdown_popup.html" only %}
     </div>
     <div class='row'>
         {% include "authenticated/assignments_table/uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
@@ -32,6 +32,8 @@
     <script type="text/javascript" src="{% static 'js/charts/classroom_performance_breakdown.js' %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/section_assignment_performance.js" %}"></script> 
     <script type="text/javascript" src="{% static "js/charts/standard_assignment_performance.js" %}"></script> 
+    <script type="text/javascript" src="{% static "js/charts/performance_breakdown.js" %}"></script> 
+    <script type="text/javascript" src="{% static "js/charts/performance_report.js" %}"></script> 
     {% block classroom_js %}{% endblock classroom_js %}
     <script type="text/javascript" src="{% static 'js/charts/graph_lib.js' %}"></script> 
     
