--- a/core/templates/authenticated/home/admin.html
+++ b/core/templates/authenticated/home/admin.html
@@ -10,5 +10,17 @@
         {% include "authenticated/widgets/announcement_create.html" only %}
         <!-- Teachers Div -->
         {% include "authenticated/widgets/classrooms_table.html" with classrooms_table=vm.authenticated_body.classrooms_table only %}
+        {% include "authenticated/widgets/teacher_performance_breakdown_popup.html" only %}
     </div>
 {% endblock home_body %}
+
+
+    
+
+{% block assignments %}
+        {% include "authenticated/assignments_table/uncorrected.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
+        {% include "authenticated/assignments_table/corrected_teacher.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+{% endblock assignments %}
+{% block home_js %}
+<script type="text/javascript" src="{% static 'js/charts/subjectroom_performance_breakdown.js' %}"></script> 
+{% endblock home_js %}
