--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -19,7 +19,7 @@
     <tbody>
     {% for row in reportcard.rows %}
         <tr>
-            <td>{{ row.name }}</td>
+            <td><a class='student_performance_breakdown_link'>{{ row.name }}</a></td>
             {% for average in row.averages %}
                 <td>{{ average }}</td>
             {% endfor %}
@@ -31,7 +31,7 @@
         {% for average in reportcard.classroom_averages_by_subject %}
             <td>{{ average }}</td>
         {% endfor %}
-        <td>{{ reportcard.classroom_average }} <span class="datatables_workaround hidden"> 00 </span></td>
+        <td><a class='student_performance_breakdown_link'>{{ reportcard.classroom_average }}</a> <span class="datatables_workaround hidden"> 00 </span></td>
         <!-- span put to make sure datatables can sort -->
     </tr>
     </tbody>
