--- a/core/templates/authenticated/subject_id/teacher.html
+++ b/core/templates/authenticated/subject_id/teacher.html
@@ -7,6 +7,7 @@
         {% include "authenticated/widgets/teacher_subjectroom_performance.html" only %}
         {% include "authenticated/widgets/standard_chart_popup.html" only %}
         {% include "authenticated/widgets/section_chart_popup.html" only %}
+        {% include "authenticated/widgets/subjectroom_performance_popup.html" only %}
     </div>
     <div class='row margin-top-20'>
         {% include "authenticated/reportcard/subjectroom.html" with reportcard=vm.authenticated_body.reportcard only %}
