--- a/core/templates/authenticated/widgets/subjectroom_performance_popup.html
+++ b/core/templates/authenticated/widgets/subjectroom_performance_popup.html
@@ -1,14 +1,14 @@
-<div id="teacher_performance_breakdown_popup" class="modal fade" role="dialog">
+<div id="subjectroom_performance_popup" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
-    <div class="modal-content">
+    <div class="subjectroom_chart_popup modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"> Teacher Performance breakdown</h4>
+        <h4 class="modal-title"> Student Performance Report</h4>
       </div>
       <div class="modal-body">
-          {% include "authenticated/charts/subjectroom_performance_breakdown_popup.html" only %}
+          {% include "authenticated/charts/subjectroom_performance.html" only %}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
