--- a/core/templates/authenticated/reportcard/subjectroom.html
+++ b/core/templates/authenticated/reportcard/subjectroom.html
@@ -10,8 +10,7 @@
     {% for reportcard_row in reportcard.rows %}
         <tr>
             <td> <a class='student_subjectroom_performance_link'>{{ reportcard_row.name }} </a></td>
-            <td><a class='student_subjectroom_performance_link'>{{ reportcard_row.average }}</a><span class="hidden student_id">{{ reportcard_row.student_id }}</span>
-            </td>
+            <td><a class='student_subjectroom_performance_link'>{{ reportcard_row.average }}</a></td><span class="hidden student_id">{{ reportcard_row.student_id }}</span>
         </tr>
     {% endfor %}
     <tr class='class_average'>
