--- a/core/templates/authenticated/assignments_table/uncorrected.html
+++ b/core/templates/authenticated/assignments_table/uncorrected.html
@@ -31,3 +31,11 @@
 {% block empty_message %}
     No Uncorrected Assignments
 {% endblock empty_message %}
+
+{% block legend %}
+    <div class="uncorrected_assignment_legend">
+        <span class="legend1"></span>
+        <span class="legend2"> - Denotes assignments that are not yet active. These are not visible to the student.</span>
+        <div class="clearboth"></div>
+    </div>
+{% endblock legend %}
