--- a/core/templates/authenticated/charts/subjectroom_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/subjectroom_performance_breakdown_popup.html
@@ -1,7 +1,7 @@
 <div class='row'>
     <div id='subjectroom_performance_breakdown_popup'>
         <div>
-            <ul id='subjectroombar' class="nav nav-tabs">
+            <ul id='subjectroombar' class="popup_bar nav nav-tabs">
             </ul>
         </div>
         <div id="subjectroombargraph">
