--- a/core/templates/authenticated/charts/student_performance_breakdown_popup.html
+++ b/core/templates/authenticated/charts/student_performance_breakdown_popup.html
@@ -1,6 +1,6 @@
 <div id='performance_breakdown_popup'>
     <div>
-        <ul id='subjectbar' class="nav nav-tabs">
+        <ul id='subjectbar' class="popup_bar nav nav-tabs">
             <li id="all"><a>Overall</a></li>
         </ul>
     </div>
