--- a/core/templates/authenticated/reportcard/subjectroom.html
+++ b/core/templates/authenticated/reportcard/subjectroom.html
@@ -9,14 +9,13 @@
     <tbody>
     {% for reportcard_row in reportcard.rows %}
         <tr>
-            <td> <a class='student_subjectroom_performance_link'>{{ reportcard_row.name }} </a></td>
-            <td><a class='student_subjectroom_performance_link'>{{ reportcard_row.average }}</a></td><span class="hidden student_id">{{ reportcard_row.student_id }}</span>
+            <td> <a class='student_subjectroom_performance_link'>{{ reportcard_row.name }} </a><span class="hidden stud_id">{{ reportcard_row.student_id }}</span></td>
+            <td><a class='student_subjectroom_performance_link'>{{ reportcard_row.average }}</a></td>
         </tr>
     {% endfor %}
     <tr class='class_average'>
         <td>Class Average</td>
-        <td>{{ reportcard.subjectroom_average }}<span class="datatables_workaround hidden">00</span></td>
-        <!-- span put to make sure datatables can sort this -->
+        <td>{{ reportcard.subjectroom_average }}</td>
     </tr>
     </tbody>
 </table>
