--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block meta %}
     <meta name="description"
-          content="HomeWork Central provides schools with an online platform for students to complete their homework. Large question banks an automatic correction provide teachers with more time to do what they love - teach."/>
+          content="HomeWork Central provides schools with an online platform for students to complete their homework. Large question banks and automatic correction provide teachers with more time to do what they love - teach."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% endblock meta %}
 
